armv8: add support for armv8 cpu
This is an emulation cpu.

Lots of stuff missing, clearly, but I want to get the basic outline right.

BUG=None
TEST=breaks no builds
BRANCH=None

Change-Id: Ie9431afe1dbc4eb8e4b5b73da006a0603a221f3f
Signed-off-by: Ronald G. Minnich <rminnich@google.com>
Reviewed-on: https://chromium-review.googlesource.com/180385
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Tested-by: Ronald Minnich <rminnich@chromium.org>

--- a/src/Kconfig
+++ b/src/Kconfig
@@ -226,6 +226,10 @@ config ARCH_ARM
 	bool
 	default n
 
+config ARCH_AARCH64
+	bool
+	default n
+
 # Warning: The file is included whether or not the if is here.
 # but the if controls how the evaluation occurs.
 if ARCH_X86
@@ -234,6 +238,10 @@ endif
 
 if ARCH_ARM
 source src/arch/arm/Kconfig
+endif
+
+if ARCH_AARCH64
+source src/arch/aarch64/Kconfig
 endif
 
 config HAVE_ARCH_MEMSET
