--- a/src/mainboard/emulation/Kconfig
+++ b/src/mainboard/emulation/Kconfig
@@ -6,6 +6,9 @@ choice
 config BOARD_EMULATION_QEMU_X86
 	bool "QEMU x86"
 
+config BOARD_EMULATION_FOUNDATION_ARMV8
+	bool "Foundation ARMV8 (may also work in qemu)"
+
 config BOARD_EMULATION_QEMU_ARMV7
 	bool "QEMU armv7 (vexpress-a9)"
 
@@ -13,6 +16,7 @@ endchoice
 
 source "src/mainboard/emulation/qemu-x86/Kconfig"
 source "src/mainboard/emulation/qemu-armv7/Kconfig"
+source "src/mainboard/emulation/foundation-armv8/Kconfig"
 
 config MAINBOARD_VENDOR
 	string
