tegra124: Add iRAM layout information.
Add iRAM layout in Kconfig comments so we can know how and where to utilize iRAM
in future.

BUG=none
TEST=none # simply adding comments.

Change-Id: I77ec661e6980ad7d77a9c26840bd911a555cc37c
Reviewed-on: https://chromium-review.googlesource.com/179814
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Hung-Te Lin <hungte@chromium.org>
Tested-by: Hung-Te Lin <hungte@chromium.org>

--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -27,6 +27,14 @@ config BOOTBLOCK_CPU_INIT
 # 0x00000 Combined bootblock and BCT blob
 # 0x18000 Master CBFS header.
 # 0x18080 Free for CBFS data.
+#
+# iRAM (256k) layout.
+# 0x4000_0000 BootROM runtime data/stack area, can be reclaimed after BootROM.
+#       +0000 (BootROM) Boot Information Table.
+#       +0100 (BootROM) BCT.
+# 0x4000_E000 Valid for anything to be executed after BootROM (effective entry
+#             point address specified in BCT).
+# 0x4003_FFFF End of iRAM.
 
 config BOOTBLOCK_ROM_OFFSET
 	hex
