--- a/src/mainboard/google/rambi/Kconfig
+++ b/src/mainboard/google/rambi/Kconfig
@@ -18,6 +18,10 @@ config VBOOT_RAMSTAGE_INDEX
 	hex
 	default 0x2
 
+config VBOOT_REFCODE_INDEX
+	hex
+	default 0x3
+
 config MAINBOARD_DIR
 	string
 	default google/rambi
