--- a/src/cpu/intel/Kconfig
+++ b/src/cpu/intel/Kconfig
@@ -35,3 +35,4 @@ source src/cpu/intel/socket_LGA775/Kconfig
 source src/cpu/intel/socket_rPGA989/Kconfig
 # Architecture specific features
 source src/cpu/intel/fit/Kconfig
+source src/cpu/intel/turbo/Kconfig
