pit: Rename pit to peach_pit.
The name pit goes by in many places in chromeos is peach_pit, where peach is
the base name and pit is the name of this particular variant. To make it
easier to work with within chromeos and to make the board names a little less
ambiguous, this change renames the pit board to peach_pit, and from Pit to
Peach Pit.

BUG=None
TEST=Built for peach_pit.
BRANCH=None

Change-Id: I51c89ba3785cf4cb9769a989b1cac71bcd1b0a05
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/183552
Reviewed-by: David Hendricks <dhendrix@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>

--- a/src/mainboard/google/peach_pit/Kconfig
+++ b/src/mainboard/google/peach_pit/Kconfig
@@ -17,7 +17,7 @@
 ## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 ##
 
-if BOARD_GOOGLE_PIT
+if BOARD_GOOGLE_PEACH_PIT
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
@@ -35,11 +35,11 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 
 config MAINBOARD_DIR
 	string
-	default google/pit
+	default google/peach_pit
 
 config MAINBOARD_PART_NUMBER
 	string
-	default "Pit"
+	default "Peach Pit"
 
 config DRAM_SIZE_MB
 	int
@@ -49,4 +49,4 @@ config EC_GOOGLE_CHROMEEC_SPI_BUS
 	hex
 	default 2
 
-endif # BOARD_GOOGLE_PIT
+endif # BOARD_GOOGLE_PEACH_PIT
