--- a/src/mainboard/google/daisy/Kconfig
+++ b/src/mainboard/google/daisy/Kconfig
@@ -17,7 +17,7 @@
 ## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 ##
 
-if BOARD_GOOGLE_SNOW
+if BOARD_GOOGLE_DAISY
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
@@ -35,11 +35,11 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 
 config MAINBOARD_DIR
 	string
-	default google/snow
+	default google/daisy
 
 config MAINBOARD_PART_NUMBER
 	string
-	default "Snow"
+	default "Daisy"
 
 config MAX_CPUS
 	int
@@ -53,4 +53,4 @@ config EC_GOOGLE_CHROMEEC_I2C_BUS
 	hex
 	default 4
 
-endif # BOARD_GOOGLE_SNOW
+endif # BOARD_GOOGLE_DAISY
