nyan_big: Initialize SDRAM without BootROM.
To support arbitrary numbers of memory configuration, we are now ready to remove
SDRAM configurations from BCT and do SDRAM initialization in ROM stage.

BUG=none
TEST=emerge-nyan_big chromeos-coreboot-nyan # Built successfully.

BRANCH=nyan_big
Change-Id: Id8673b9ec8c59e450d195758492d8e3484e02edc
Signed-off-by: Hung-Te Lin <hungte@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/183624

--- a/src/mainboard/google/nyan_big/Makefile.inc
+++ b/src/mainboard/google/nyan_big/Makefile.inc
@@ -32,5 +32,6 @@ bootblock-y += bootblock.c
 bootblock-y += pmic.c
 
 romstage-y += romstage.c
+romstage-y += sdram_configs.c
 
 ramstage-y += mainboard.c
