nyan_big: Add 204MHz BCT for bringup, use 1.2V for VDD_CPU
PMIC VDD_CPU voltage is always 1.2V, so skip board_id check.

204MHz BCT is from the board manuf, but boots fine on my
nyan. 792/924 BCTs will be added later, when available.

BUG=none
TEST=builds and boots OK on my nyan board with depthcharge
changes for board id 0 in nyan_big.
BRANCH=none

Change-Id: Ib26bed66414b4a0943f3cfd5de907d7135a69152
Signed-off-by: Tom Warren <twarren@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/183939
Reviewed-by: David Hendricks <dhendrix@chromium.org>

--- a/src/mainboard/google/nyan_big/Kconfig
+++ b/src/mainboard/google/nyan_big/Kconfig
@@ -92,9 +92,12 @@ config EC_GOOGLE_CHROMEEC_SPI_BUS
 
 choice
 	prompt "BCT sdram configuration"
-	default NYAN_BIG_BCT_SDRAM_792
+	default NYAN_BIG_BCT_SDRAM_204
 	help
 	  The SDRAM configuration to put in the BCT.
+
+config NYAN_BIG_BCT_SDRAM_204
+	bool "204 MHz"
 
 config NYAN_BIG_BCT_SDRAM_792
 	bool "792 MHz"
