aarch64/foundation-armv8: Basic bootblock implementation
This adds simple bootblock initialization procedures with console
ouput support for the Foundation ARMv8 model. Includes stack
setup, basic caches/tlb/mmu control routines, SCTLR register access
for different exception levels and memset.S code from ARM.

It runs on the Foundation_v8 fast model from arm (see command line
in src/mainboard/emulation/foundation-armv8/Kconfig) until loading
romstage at cbfs_load_stage(), where it currently halts. Code is
debugable using printk only (after console_init) because the
Foundation model does not provide bare metal debugging support (so
adding exception handling and stack/register dump might be useful).

BUG=None
BRANCH=none
TEST=Ran image in foundation model
Signed-off-by: Marcelo Povoa <marcelogp@chromium.org>

Change-Id: I81b12416424a02f24a80924791fc39d9411fa4b4
Reviewed-on: https://chromium-review.googlesource.com/185275
Reviewed-by: David Hendricks <dhendrix@chromium.org>
Tested-by: Marcelo Póvoa <marcelogp@chromium.org>
Commit-Queue: Marcelo Póvoa <marcelogp@chromium.org>

--- a/src/arch/aarch64/Kconfig
+++ b/src/arch/aarch64/Kconfig
@@ -3,6 +3,7 @@ menu "Architecture (aarch64)"
 config ARM_AARCH64_OPTIONS
 	bool
 	default y
+	select BOOTBLOCK_CONSOLE
 #	select HAVE_ARCH_MEMSET
 #	select HAVE_ARCH_MEMCPY
 #	select HAVE_ARCH_MEMMOVE
