--- a/src/mainboard/emulation/foundation-armv8/Kconfig
+++ b/src/mainboard/emulation/foundation-armv8/Kconfig
@@ -12,6 +12,10 @@
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ## GNU General Public License for more details.
 
+# To execute, do:
+# ./Foundation_v8 --cores=1 --no-secure-memory --visualization \
+# --gicv3 --data=build/coreboot.rom@0x0
+
 if BOARD_EMULATION_FOUNDATION_ARMV8
 
 config BOARD_SPECIFIC_OPTIONS # dummy
@@ -46,21 +50,29 @@ config DRAM_SIZE_MB
 	int
 	default 1024
 
-# Memory map
+# Memory map for Foundation v2 model
+# Reference: ARM v8-A Foundation Model User Guide
 #
-# 0xA000_0000: first instruction (called from BL3)
+# 0x00_0000_0000 - 0x00_03FF_FFFF		Trusted Boot ROM
+# 0x00_0400_0000 - 0x00_0403_FFFF		Trusted SRAM
+# 0x00_0600_0000 - 0x00_07FF_FFFF		Trusted DRAM
+# 0x00_1C01_0000 - 0x00_1C01_FFFF		System Registers
+# 0x00_1C09_0000 - 0x00_1C09_FFFF		UART0 (PL011)
+# 0x00_2E00_0000 - 0x00_2E00_FFFF		Non-trusted SRAM
+# 0x00_8000_0000 - 0x00_FFFF_FFFF		DRAM (0GB - 2GB)
+# 0x08_8000_0000 - 0x09_FFFF_FFFF		DRAM (2GB - 8GB)
 
 config BOOTBLOCK_BASE
 	hex
-	default 0xA0000000
+	default 0x0
 
 config ID_SECTION_BASE
 	hex
-	default 0xA001f000
+	default 0x1f000
 
 config ROMSTAGE_BASE
 	hex
-	default 0xA0020000
+	default 0x20000
 
 config ROMSTAGE_SIZE
 	hex
@@ -102,5 +114,13 @@ config RAMBASE
 config RAMTOP
 	hex
 	default 0x01100000
+
+config STACK_TOP
+	hex
+	default 0x8000ff00
+
+config STACK_SIZE
+	hex
+	default 0x00001000
 
 endif #  BOARD_EMULATION_FOUNDATION_ARMV8
