aarch64: Implement basic exception handling
This installs a exception vector in bootblock, aborts are now
handled with a register file dump to console for debugging.

BUG=None
BRANCH=none
TEST=Ran image in foundation model, tested some exceptions
Signed-off-by: Marcelo Povoa <marcelogp@chromium.org>

Change-Id: I4cb4d95fc5eb905f8c3c623315a46a00fdbf2677
Reviewed-on: https://chromium-review.googlesource.com/185755
Reviewed-by: David Hendricks <dhendrix@chromium.org>
Tested-by: Marcelo Póvoa <marcelogp@chromium.org>
Commit-Queue: Marcelo Póvoa <marcelogp@chromium.org>

--- a/src/arch/aarch64/Makefile.inc
+++ b/src/arch/aarch64/Makefile.inc
@@ -123,7 +123,7 @@ else
 	$(CC) $(CFLAGS) -nostdlib -r -o $@ -Wl,--start-group $(stages_o) $(ramstage-objs) $(LIBGCC_FILE_NAME) -Wl,--end-group
 endif
 
-CFLAGS += \
+CFLAGS += -mstrict-align \
 
 ldscripts =
 ldscripts += $(src)/arch/aarch64/romstage.ld
@@ -139,15 +139,19 @@ $(obj)/mainboard/$(MAINBOARDDIR)/romstage.pre.inc: $(src)/mainboard/$(MAINBOARDD
 
 # Things that appear in every board
 ramstage-y += exception.c
-#ramstage-y += exception_asm.S
+ramstage-y += exception_asm.S
 
 bootblock-$(CONFIG_BOOTBLOCK_CONSOLE) += early_console.c
 bootblock-y += cache.c
 bootblock-y += cpu.S
+bootblock-$(CONFIG_BOOTBLOCK_CONSOLE) += exception.c
+bootblock-$(CONFIG_BOOTBLOCK_CONSOLE) += exception_asm.S
 
 romstage-y += cache.c
 romstage-y += cpu.S
 #romstage-y += div0.c
+romstage-y += exception.c
+romstage-y += exception_asm.S
 romstage-$(CONFIG_EARLY_CONSOLE) += early_console.c
 
 bootblock-y += stages.c
