--- a/src/mainboard/emulation/qemu-armv7/Kconfig
+++ b/src/mainboard/emulation/qemu-armv7/Kconfig
@@ -1,7 +1,7 @@
 ##
 ## This file is part of the coreboot project.
 ##
-## Copyright (C) 2013 Google Inc.
+## Copyright 2014 Google Inc.
 ##
 ## This software is licensed under the terms of the GNU General Public
 ## License version 2, as published by the Free Software Foundation, and
@@ -27,6 +27,12 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select CPU_ARMLTD_CORTEX_A9
 	select HAVE_UART_MEMORY_MAPPED
 	select HAVE_UART_SPECIAL
+	select BOOTBLOCK_CONSOLE
+	select EARLY_CONSOLE
+	select CONSOLE_SERIAL
+	select ARM_BOOTBLOCK_ARMV7
+	select ARM_ROMSTAGE_ARMV7
+	select ARM_RAMSTAGE_ARMV7
 	select BOARD_ROMSIZE_KB_4096
 
 config MAINBOARD_DIR
@@ -63,6 +69,14 @@ config DRAM_SIZE_MB
 # 0x0011_0000: CBFS data
 # 0x0100_0000: reserved for ramstage
 # 0x1000_0000: I/O map address
+#
+config STACK_TOP
+	hex
+	default 0x00100000
+
+config STACK_BOTTOM
+	hex
+	default 0x0007FF00
 
 config BOOTBLOCK_BASE
 	hex
@@ -75,6 +89,10 @@ config ROMSTAGE_BASE
 config RAMSTAGE_BASE
 	hex
 	default SYS_SDRAM_BASE
+
+config BOOTBLOCK_ROM_OFFSET
+	hex
+	default 0x0
 
 config CBFS_HEADER_ROM_OFFSET
 	hex
