aarch64: Add aarch64-elf toolchain to crossgcc Makefile
BUG=None
BRANCH=none
TEST=Build crosgcc for aarch64-elf
Signed-off-by: Marcelo Povoa <marcelogp@chromium.org>

Change-Id: Ifc886b6bd125552855ad1cf49ee7c1b7a0350895
Reviewed-on: https://chromium-review.googlesource.com/186413
Reviewed-by: Stefan Reinauer <reinauer@chromium.org>
Tested-by: Marcelo Póvoa <marcelogp@chromium.org>
Reviewed-by: David Hendricks <dhendrix@chromium.org>
Commit-Queue: Marcelo Póvoa <marcelogp@chromium.org>

--- a/util/crossgcc/Makefile
+++ b/util/crossgcc/Makefile
@@ -3,11 +3,13 @@ all: build
 build:
 	bash ./buildgcc -G -p i386-elf
 	bash ./buildgcc -G -p armv7a-eabi
+	bash ./buildgcc -G -p aarch64-elf
 
 .PHONY: build-without-gdb
 build-without-gdb:
 	bash ./buildgcc -p i386-elf
 	bash ./buildgcc -p armv7a-eabi
+	bash ./buildgcc -p aarch64-elf
 
 clean:
 	rm -rf xgcc
