aarch64/foundation-armv8: Enable DYNAMIC_CBMEM
Some 64-bit pointer casts errors related to
DYNAMIC_CBMEM were fixed in a separate patch.

BUG=None
BRANCH=none
TEST=Ran image in foundation model

Change-Id: Ia4cce9bef152e9acd9c897de895b7c293f7d2188
Signed-off-by: Marcelo Povoa <marcelogp@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/186742
Reviewed-by: David Hendricks <dhendrix@chromium.org>

--- a/src/arch/aarch64/Makefile.inc
+++ b/src/arch/aarch64/Makefile.inc
@@ -153,6 +153,7 @@ romstage-y += cpu.S
 romstage-y += exception.c
 romstage-y += exception_asm.S
 romstage-$(CONFIG_EARLY_CONSOLE) += early_console.c
+romstage-y += cbmem.c
 
 bootblock-y += stages.c
 romstage-y += stages.c
@@ -170,6 +171,7 @@ ramstage-y += cpu.S
 
 ramstage-y += boot.c
 ramstage-y += tables.c
+ramstage-y += cbmem.c
 
 #romstage-y += memset.S
 #ramstage-y += memset.S
