--- a/src/mainboard/emulation/foundation-armv8/Kconfig
+++ b/src/mainboard/emulation/foundation-armv8/Kconfig
@@ -25,6 +25,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select HAVE_UART_MEMORY_MAPPED
 	select HAVE_UART_SPECIAL
 	select BOARD_ROMSIZE_KB_4096
+	select DYNAMIC_CBMEM
 
 config MAINBOARD_DIR
 	string
