--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -11,6 +11,7 @@ config SOC_NVIDIA_TEGRA124
 	select ARM_BOOTBLOCK_ARMV4
 	select ARM_ROMSTAGE_ARMV7
 	select ARM_RAMSTAGE_ARMV7
+	select ARM_LPAE
 
 if SOC_NVIDIA_TEGRA124
 
@@ -33,8 +34,8 @@ config BOOTBLOCK_CPU_INIT
 #  so the bootblock loading address must be placed after that. After the
 #  handoff that area may be reclaimed for other uses, e.g. CBFS cache.)
 #
-# 0x4000_0000 TTB (16KB).
-# 0x4000_4000 CBFS mapping cache (96KB).
+# 0x4000_0000 TTB (16K+32B). 32B is for L1 table of LPAE.
+# 0x4000_4020 CBFS mapping cache (96K-32B)
 # 0x4001_C000 Stack (16KB... don't reduce without comparing LZMA scratchpad!).
 # 0x4002_0000 Bootblock (max 48KB).
 # 0x4002_C000 ROM stage (max 80KB).
@@ -88,11 +89,11 @@ config TTB_BUFFER
 
 config CBFS_CACHE_ADDRESS
 	hex "memory address to put CBFS cache data"
-	default 0x40004000
+	default 0x40004020
 
 config CBFS_CACHE_SIZE
 	hex "size of CBFS cache data"
-	default 0x00018000
+	default 0x00017fe0
 
 choice CONSOLE_SERIAL_TEGRA124_UART_CHOICES
 	prompt "Serial Console UART"
