--- a/src/northbridge/amd/agesa/Kconfig
+++ b/src/northbridge/amd/agesa/Kconfig
@@ -31,6 +31,10 @@ config S3_VGA_ROM_RUN
 	bool
 	default n
 
+config DDR3_SOLDERED_DOWN
+	bool
+	default n
+
 source src/northbridge/amd/agesa/family10/Kconfig
 source src/northbridge/amd/agesa/family12/Kconfig
 source src/northbridge/amd/agesa/family14/Kconfig
