--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -138,4 +138,25 @@ config CONSOLE_SERIAL_UART_ADDRESS
 	help
 	  Map the UART names to the respective MMIO addres.
 
+config TEGRA124_MODEL_TD570D
+	bool "TD570D"
+
+config TEGRA124_MODEL_TD580D
+	bool "TD580D"
+
+config TEGRA124_MODEL_CD570M
+	bool "CD570M"
+
+config TEGRA124_MODEL_CD580M
+	bool "CD580M"
+
+# Default to 2GHz, the lowest maximum frequency.
+config PLLX_KHZ
+	int
+	default 2000000 if TEGRA124_MODEL_TD570D
+	default 2300000 if TEGRA124_MODEL_TD580D
+	default 2100000 if TEGRA124_MODEL_CD570M
+	default 2300000 if TEGRA124_MODEL_CD580M
+	default 2000000
+
 endif
