--- a/src/northbridge/amd/agesa/Kconfig
+++ b/src/northbridge/amd/agesa/Kconfig
@@ -35,6 +35,10 @@ config DDR3_SOLDERED_DOWN
 	bool
 	default n
 
+config CBFS_SIZE
+	hex "Size of CBFS filesystem in ROM"
+	default ROM_SIZE
+
 source src/northbridge/amd/agesa/family10/Kconfig
 source src/northbridge/amd/agesa/family12/Kconfig
 source src/northbridge/amd/agesa/family14/Kconfig
