ipq806x: Add generic support skeleton for ipq806x
Skeleton for soc ipq806x

BUG=None
BRANCH=None
TEST=Compiled successfully

Change-Id: I92a8d592d762f59665e15d1a7fc6cc73dc74c296
Signed-off-by: Furquan Shaikh <furquan@google.com>
Reviewed-on: https://chromium-review.googlesource.com/190723
Reviewed-by: Vadim Bendebury <vbendeb@chromium.org>
Commit-Queue: Furquan Shaikh <furquan@chromium.org>
Tested-by: Furquan Shaikh <furquan@chromium.org>

--- a/src/soc/Kconfig
+++ b/src/soc/Kconfig
@@ -3,5 +3,6 @@ source src/soc/intel/Kconfig
 endif
 if ARCH_ARM
 source src/soc/nvidia/Kconfig
+source src/soc/qualcomm/Kconfig
 source src/soc/samsung/Kconfig
 endif
