--- a/src/soc/Makefile.inc
+++ b/src/soc/Makefile.inc
@@ -3,4 +3,5 @@
 ################################################################################
 subdirs-y += intel
 subdirs-y += nvidia
+subdirs-y += qualcomm
 subdirs-y += samsung
