--- a/src/arch/arm/armv7/Makefile.inc
+++ b/src/arch/arm/armv7/Makefile.inc
@@ -73,4 +73,8 @@ ramstage-y += mmu.c
 ramstage-c-ccopts += $(armv7_flags)
 ramstage-S-ccopts += $(armv7_asm_flags)
 
+# All rmodule code is armv7 if ramstage is armv7.
+rmodules-c-ccopts += $(armv7_flags)
+rmodules-S-ccopts += $(armv7_asm_flags)
 endif
+
