--- a/src/vendorcode/google/chromeos/Kconfig
+++ b/src/vendorcode/google/chromeos/Kconfig
@@ -77,6 +77,7 @@ config VBOOT_VERIFY_FIRMWARE
 	bool "Verify firmware with vboot."
 	default n
 	depends on CHROMEOS
+	select RELOCATABLE_MODULES
 	help
 	  Enabling VBOOT_VERIFY_FIRMWARE will use vboot to verify the ramstage
 	  and boot loader.
