x86: Set BOOT_MEDIA_SPI_BUS
BOOT_MEDIA_SPI_BUS is a Kconfig variable used on some ARM-based
platforms to set up CBFS media. It turns out it can also be helpful
for setting up the eventlog which is intended to reside on the same
SPI flash as CBFS. Setting it for x86 will allow us to remove an
assumption about which SPI bus is used for this flash device.

Long term this can go away as we come up with a better abstraction
for the eventlog's backing store. This is only intended to help us
get from here to there.

BUG=none
BRANCH=none
TEST=built and booted on Link
Signed-off-by: David Hendricks <dhendrix@chromium.org>

Change-Id: I1d84dc28592fbece33a70167be59e83bca9cd7bc
Reviewed-on: https://chromium-review.googlesource.com/191202
Tested-by: David Hendricks <dhendrix@chromium.org>
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: David Hendricks <dhendrix@chromium.org>

--- a/src/cpu/x86/Kconfig
+++ b/src/cpu/x86/Kconfig
@@ -128,3 +128,10 @@ config BACKUP_DEFAULT_SMM_REGION
 	help
 	 The cpu support will select this option if the default SMM region
 	 needs to be backed up for suspend/resume purposes.
+
+config BOOT_MEDIA_SPI_BUS
+	int
+	default 0
+	depends on SPI_FLASH
+	help
+	 Most x86 systems which boot from SPI flash boot using bus 0.
