--- a/src/mainboard/google/nyan_blaze/bct/Makefile.inc
+++ b/src/mainboard/google/nyan_blaze/bct/Makefile.inc
@@ -20,6 +20,7 @@
 bct-cfg-$(CONFIG_NYAN_BLAZE_BCT_CFG_EMMC) += emmc.cfg
 bct-cfg-$(CONFIG_NYAN_BLAZE_BCT_CFG_SPI) += spi.cfg
 bct-cfg-y += odmdata.cfg
+bct-cfg-y += jtag.cfg
 
 # Note when SDRAM config (sdram-*.cfg) files are changed, we have to regenerate
 # the include files (sdram-*.inc). See ../../nyan/bct/Makefile.inc for more
