--- a/src/arch/arm/Kconfig
+++ b/src/arch/arm/Kconfig
@@ -36,6 +36,10 @@ config ARM_BOOTBLOCK_NORMAL
 
 endchoice
 
+config CBMEM_CONSOLE_PRERAM_BASE
+	hex
+	depends on CONSOLE_CBMEM
+
 config CPU_HAS_BOOTBLOCK_INIT
 	bool
 	default n
