console: Make more consoles (including cbmem) work in the bootblock.
The cbmem console had been explicitly disabled in the bootblock because of
the complexity of handing off the console from the bootblock to the ROM stage.
The fixed cbmem location means no handoff is really necessary, so these can
be re-enabled.

Also include some other shared console drivers if they and bootblock console
have been enabled.

BUG=None
TEST=Built and booted on nyan and saw bootblock console output in cbmem. Built
for falco.
BRANCH=None

Change-Id: Iffe2747d6d526b58fabb0195f8744ae420f2e19d
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/193168
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>

--- a/src/lib/Makefile.inc
+++ b/src/lib/Makefile.inc
@@ -30,6 +30,13 @@ ifneq ($(CONFIG_HAVE_ARCH_MEMMOVE),y)
 bootblock-y += memmove.c
 endif
 
+ifeq ($(CONFIG_BOOTBLOCK_CONSOLE),y)
+bootblock-$(CONFIG_CONSOLE_SERIAL8250) += uart8250.c
+bootblock-$(CONFIG_CONSOLE_SERIAL8250MEM) += uart8250mem.c
+bootblock-$(CONFIG_CONSOLE_CBMEM) += cbmem_console.c
+bootblock-$(CONFIG_CONSOLE_NE2K) += ne2k.c
+endif
+
 ifneq ($(CONFIG_HAVE_ARCH_MEMSET),y)
 romstage-y += memset.c
 rmodules-y += memset.c
