ipq8064: Make clock code build in coreboot
Include clock.c in the appropriate coreboot stages, modify the code to
build cleanly. Use proper pointer cast in .h files.

BUG=chrome-os-partner:27784
TEST='emerge-storm coreboot' still succeeds

Change-Id: I227c871b17e571f6a1db3ada3821dbb1ee884e59
Signed-off-by: Vadim Bendebury <vbendeb@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/196407

--- a/src/soc/qualcomm/ipq806x/Makefile.inc
+++ b/src/soc/qualcomm/ipq806x/Makefile.inc
@@ -1,10 +1,13 @@
 bootblock-y += cbfs.c
+bootblock-y += clock.c
 bootblock-y += gpio.c
 
 romstage-y += cbfs.c
+romstage-y += clock.c
 romstage-y += gpio.c
 
 ramstage-y += cbfs.c
+ramstage-y += clock.c
 ramstage-y += gpio.c
 ramstage-y += timer.c
 
